welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:4: error: Missing closing brace `}' assumed here
def dogHouse() { for(a<- 1 to 4) {avance();avance();left()} 
^